# boggle-search-python

./: .gitignore  README.md  main.py  pyproject.toml
boggle/: Board.py  Cell.py  CellsBuilder.py  GameManager.py  Path.py  WordFinder.py  __init__.py
prefix_trie/: Node.py  PrefixTrie.py  Visitor.py  WordContainer.py  __init__.py
