[tool.poetry]
name = "boggle-search-python"
version = "0.1.0"
description = ""
authors = ["Ari Wolff Bolton <ariwbolton@gmail.com>"]
readme = "README.md"
packages = [{include = "boggle_search_python"}]

[tool.poetry.dependencies]
python = "^3.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

